--- a/pm-app/app/globals.css
+++ b/pm-app/app/globals.css
@@ -7,12 +7,12 @@
 }
 
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+    background: black;
     border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #888;
+    background: black;
 }
 
 ::-webkit-scrollbar-thumb:hover {
